Style Guide errors, corrected the code with the Google Java Style Guide, comments added