@@ -3,39 +3,42 @@ package com.cardio_generator.outputs;
 import java.io.IOException;
 import java.io.PrintWriter;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
 import java.util.concurrent.ConcurrentHashMap;
 
-public class fileOutputStrategy implements OutputStrategy {
+public class FileOutputStrategy implements OutputStrategy {
 
-    private String BaseDirectory;
+    // Changed field name to lowerCamelCase and marked final (immutable after construction)
+    private final String baseDirectory;
 
-    public final ConcurrentHashMap<String, String> file_map = new ConcurrentHashMap<>();
+    // Changed name to lowerCamelCase, made private & final to obey encapsulation rules.
+    private final ConcurrentHashMap<String, Path> fileMap = new ConcurrentHashMap<>();
 
-    public fileOutputStrategy(String baseDirectory) {
+    public FileOutputStrategy(String baseDirectory) {
 
-        this.BaseDirectory = baseDirectory;
+        this.baseDirectory = baseDirectory;
     }
 
     @Override
     public void output(int patientId, long timestamp, String label, String data) {
         try {
-            // Create the directory
-            Files.createDirectories(Paths.get(BaseDirectory));
-        } catch (IOException e) {
-            System.err.println("Error creating base directory: " + e.getMessage());
+            // Google style: method calls indented + ensure the directory exists
+            Files.createDirectories(Path.of(baseDirectory));
+        } catch (IOException ioException) { // Renamed variable from 'e' to 'ioException' for clarity
+            System.err.println("Error creating base directory: " + ioException.getMessage());
             return;
         }
-        // Set the FilePath variable
-        String FilePath = file_map.computeIfAbsent(label, k -> Paths.get(BaseDirectory, label + ".txt").toString());
+        // Set the filePath variable
+        // Set filePath to lowerCamelCase
+        Path filePath = fileMap.computeIfAbsent(label, l -> Path.of(baseDirectory, l + ".txt"));
 
-        // Write the data to the file
-        try (PrintWriter out = new PrintWriter(
-                Files.newBufferedWriter(Paths.get(FilePath), StandardOpenOption.CREATE, StandardOpenOption.APPEND))) {
-            out.printf("Patient ID: %d, Timestamp: %d, Label: %s, Data: %s%n", patientId, timestamp, label, data);
-        } catch (Exception e) {
-            System.err.println("Error writing to file " + FilePath + ": " + e.getMessage());
+        // Try‑with‑resources: automatically closes the writer
+        try (PrintWriter writer = new PrintWriter(
+                Files.newBufferedWriter(filePath, StandardOpenOption.CREATE, StandardOpenOption.APPEND))) {
+            writer.printf("Patient ID: %d, Timestamp: %d, Label: %s, Data: %s%n", patientId, timestamp, label, data);
+        } catch (IOException ioException) { // Catch the specific checked exception.
+            System.err.println("Error writing to file " + filePath + ": " + ioException.getMessage());
         }
     }
 }
